// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistoryPagination.vue > [With Empty History]: should be rendered correctly 1`] = `
<s-pagination-stub
  class="history-pagination"
  currentpage="1"
  layout="slot"
  pagesize="10"
  pagesizes="10,50,100"
  sizeslabel="Rows per page"
  total="0"
/>
`;

exports[`HistoryPagination.vue > [With Last Page]: should be rendered correctly 1`] = `
<s-pagination-stub
  class="history-pagination"
  currentpage="2"
  layout="slot"
  pagesize="10"
  pagesizes="10,50,100"
  sizeslabel="Rows per page"
  total="0"
/>
`;

exports[`HistoryPagination.vue > [With Loading State]: should be rendered correctly 1`] = `
<s-pagination-stub
  class="history-pagination"
  currentpage="2"
  layout="slot"
  pagesize="10"
  pagesizes="10,50,100"
  sizeslabel="Rows per page"
  total="0"
/>
`;

exports[`HistoryPagination.vue > [With Second Page]: should be rendered correctly 1`] = `
<s-pagination-stub
  class="history-pagination"
  currentpage="2"
  layout="slot"
  pagesize="10"
  pagesizes="10,50,100"
  sizeslabel="Rows per page"
  total="0"
/>
`;
